data/derived/comb/progs/unify/prog1421.ml.out
Characters 152-153:
  List.fold_left f base l;;
                        ^
Error: This expression has type string but an expression was expected of type
         'a list
